# HTTPandDB

client/: CMakeLists.txt  config.json  main.cpp
client/include/: Config.h  HTTP_Client.h
client/src/: Config.cpp  HTTP_Client.cpp
general/include/: User.h
general/src/: User.cpp
server/: CMakeLists.txt  config.json  main.cpp
server/include/: Config.h  DataBase.h  HTTP_Server.h
server/src/: DataBase.cpp  HTTP_Server.cpp
